lab1/Test/L1-A-5-31.output
Error Type A at Line 1
Error Type B at Line 14
Error Type B at Line 29
Error Type A at Line 31
Error Type B at Line 34
Error Type B at Line 36
Error Type A at Line 38
Error Type B at Line 42
Error Type A at Line 46
