lab1/Test/L1-A-5-31.cmm
int gJj ( ) ${
  if ( ! ZIHA1VDD4XtR2d3BW5_s ( ! - hdBHGR8Me4DquB 
    = fasupdOku2Xg ) < yYu6rrNX2CFa02ZEs ( ! eX_FihCkSB 
    = yByZOAQ ) * IV0iRdyu6dLbcJyjS ( ) <= ! ! Rzjjh_ccRhpH 
    ( ) - vDkOzlZTaj6n ( v2gn ) / rblw_xpogUTFNltTuk * 
    Vk0EzJUomns9Aq - ! Zz <= MeYp9wTTUeAY ( GQycCoQczrVpZ 
    ( w5LGVyxSgkFQJ ) * u0I * KY39TYYKAkAhV8X0QM / jS 
    && kPz0UNJRfS_x9iO || Ug_Xea9luiyil || yKYN6UL9eqU9Fljts 
    || uJZamnjwl || TV5qDlZjm || PxaMz77 || _OKJgpOAlm8 
    || NAVRKLTsL || GJxFQfw6IK5u6sJSd || c9 , vc ) [ ! 
    x = JDq9Wwzp ] . ZL80X . xTEcK - ! cCFCz * rHSXO1T5CzdZnLu8vlV 
    - ( lzZIFVX3ZeJNVUku9U ) [ bSlJMpKjJjyb08jm5 ] / XlAY2Zfzi8p 
    - - fgcKvKpDU / re_UyuJw3_shhuY - ! St7oscTsn9IMsQpKSjjx 
    + ! rQre4MPKHfwAAR + - p5xx5gkPeFbP8eFcl / / bEf_ehZrp 
    > ! ! - XLYkc9KaWX / - YaXpVpKPPjUpKe8nkoLa - - qCKfLDuWOiqy2UJbDLyo 
    / t * ZXIyqhR != - s4Ji9nnl5rknYHVXE ( _b9Dys2odEbFMvvF 
    ) / 1549530029 [ z ] * - rxsEN5zvC_VL_Eiv25Z > - - 
    - nDClaUIGAXGdIPeOnl / ! Y4_OEJNV <= ORraQW ( ) / 
    - FyjAyQiJU9tEQ36F4IU * - cLpYeLT6B5F8 / ! yne1UUT 
    / ! BAXDw542mJKNTB0lW >= ! - UJQ ( w6lBHrRTDm1oDxoZ_Sq 
    ) * ! bDCSCtlVv / - gipmmIiYt / ! qBisa3DvcaKqn7Xe 
    / - L8OY + 878438422.308690923 + - sgwMVlulKro / GB 
    * RpmQYj / GfQjtRz * XL9XWzdiXhG0_DR_V * NspGZ + - 
    FxygzfS72cuUJqP * vFIS37 * AZcUOIXvx3I85V6OSh / aGakzCNwG 
    >= Y1GfR0hnMbp9V ( ) [ - rVoP2olnV2CD7eA_D && Iv ] 
    )   return yIxH ( ) * DOJc0VTRA3FPZ / nqkizoMpGm3lxAsXZ 
    * jHgCAmChowjmmR0Sm * i9JXC5nleE0sM / zb6da0K * ZzCWjtRpi_AM3zq3 
    - G5GQR8 != lfbPcTW0 >= C7gZ == yujvl != clGhbmRW 
    != qnCSQu7mgR8_l6U < _EeQ62SMXraO3 > jFa > && NPDu9 
    || bg5Eo7YnnD5IgXF0cP ;
else   - MHX9geAx = pKxHckewbpSTxO27U ;'

  if ( LIv0nyUh5kLizqwrL5Lu ( ) * Rsty ( ) / W8m4dPf26KDEnpSq4uKu 
    ( ) / - ICz7yn0My [ ] [ MZ5onmmn7OBoG ] - ! - TrRX0wVpjpRA 
    * a36tvmerrzt8aY * FjMS8BZHC / XJCqV8fxbROHGqDD / 
    KL411jLbEi * wMrGZN77n )   if CLNzEcLkrpUmxKwi )   xYP2SWbR3AKXRCnw 
    ;
else   Pr2ASc7olr3BnSpRK5i ;'

else   rs8ZYF3TEtpQZT5gl9k ;

  while ( UEquCfeq6V49HBjI ( oazJ ( XH ) = , wPfXJ 
    ) * - bOql7bW / - Zk1ay3 * - T962rf4go - - lrY1uW 
    / R8fsjd1lSULCucaqd * oVNEL6b9XIxspIdaWXg - RYYoUiOaeJujn8M 
    ( NRF1SsAgWd0vKB2HyF ) . dl1sgd8xAr86 [ QLK ] )   return 
    @OrzuNHeiUy ;

}
